--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "browser-sync": "^2.18.2",
     "browserify": "^13.1.1",
     "gulp": "^3.9.1",
+    "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.3.2",
     "gulp-streamify": "^1.0.2",
     "gulp-uglify": "^2.0.0",
