--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
   "dependencies": {
     "express": "^4.14.0",
     "react": "^15.4.1",
-    "react-dom": "^15.4.1"
+    "react-dom": "^15.4.1",
+    "react-dropzone": "^3.7.3",
+    "react-dropzone-component": "^1.2.1"
   },
   "devDependencies": {
     "babel-core": "^6.18.2",
@@ -28,8 +30,9 @@
     "babel-preset-react": "^6.16.0",
     "babelify": "^7.3.0",
     "browser-sync": "^2.18.2",
-    "browserify": "^13.1.1",
+    "browserify": "^13.0.1",
     "gulp": "^3.9.1",
+    "gulp-concat": "^2.6.1",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.3.2",
     "gulp-streamify": "^1.0.2",
