--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
     "react-dropzone": "^3.7.3",
-    "react-dropzone-component": "^1.2.1"
+    "react-dropzone-component": "^1.2.1",
+    "superagent": "^3.1.0"
   },
   "devDependencies": {
     "babel-core": "^6.18.2",
