--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   "homepage": "https://github.com/wyattlindsey/obj2json#readme",
   "dependencies": {
     "express": "^4.14.0",
+    "jquery": "^3.1.1",
+    "multer": "^1.2.0",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
     "react-dropzone": "^3.7.3",
@@ -39,6 +41,7 @@
     "gulp-sass": "^2.3.2",
     "gulp-streamify": "^1.0.2",
     "gulp-uglify": "^2.0.0",
+    "multer": "^1.2.0",
     "vinyl-source-stream": "^1.1.0",
     "watchify": "^3.7.0"
   }
