--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
   "homepage": "https://github.com/wyattlindsey/obj2json#readme",
   "dependencies": {
     "express": "^4.14.0",
+    "express-fileupload": "0.0.5",
     "jquery": "^3.1.1",
     "multer": "^1.2.0",
+    "node-uuid": "^1.4.7",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
     "react-dropzone": "^3.7.3",
