--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express": "^4.14.0",
     "express-fileupload": "0.0.5",
     "jquery": "^3.1.1",
+    "mongoose": "^4.7.1",
     "multer": "^1.2.0",
     "node-uuid": "^1.4.7",
     "react": "^15.4.1",
